# learn_github_actions

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  changelog.md  noxfile.py  pyproject.toml
.github/workflows/: dummy_workflow.yaml  dummy_workflow_release_new_version.yaml  dummy_workflow_test_pr_comment_trigger.yaml  main.yml  release_new_version.yml  run_pre_commit.yaml  slack_notif_on_new_version_release.yml  test_workflow.yaml  tests.yml
learn_github_actions/: add.py  divide.py  multiply.py  subtract.py
tests/: test_add.py  test_divide.py  test_multiply.py  test_subtract.py
