[tool.black]
target_version = ['py35', 'py36', 'py37', 'py38']
include = '\.pyi?\$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry]
name = "learn-github-actions"
version = "0.1.4"description = "Throwaway project to learn github actions"
authors = ["Crispin Logan <crispin@humn.ai>"]
readme = "README.md"
packages = [{include = "learn_github_actions"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = '>=2.16.0'
black = '22.3.0'
flake8 = '3.9.0'
isort = '5.7.0'
pylint = "^2.12.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
